﻿1.1.1
+ Added new CSS element "poem_subtitle" for poem's subtitles, also styled it to left allign
* Fixed converter dropping the "strikethrough" tag text
* Fixed converting of poem subtitles

1.1.0
(Major revoke)
+ Moved to Visual Studio 2012 Update 1
+ Moved to .Net 4.5
+ Moved to InnoSetup (warning: need to uninstall prev. version manualy , upgrade does not work)
+ Setup now is unified for both x64 and Win32 versions
+ Added support to act as export for FBE (you can "Save as" to ePub now)
* Changed UnRar library used, both because Chiklite no longer suport theirs and becouse I needed something that compiled as AnyCPU to resolve installation issues
* Fixed missing "FixAlways" item from the settings dialog




1.0.51
+ Added detection of the image type in case media tag in FB2 was wrong
* Fixed false warning when building setup project regarding .Net version 

1.0.50
* Fixed the bug when removing the font assignment to the CSS element did not removed association until the CSS element itself was removed
* Changed transliterate library to not use ASP.NET related commands to be able to compile as Client profile
* Updated to the newer version of Log4.net (1.2.11) that uses client profile
* Changed .Net 4.0 Profile to .Net 4.0 client profile to make users less to download on install

1.0.49
* Fixed crash if user clicked "Reset" in settings
* Changed both command libne utility and GUI to use same version source file (this fixes issue when GUI added it's own version to converted ePub file)
* Fixed wait cursor in the GUI while converting
* Changed GUI utility to use multicore CPUs (now if processing several files each file processed on it's own core)
* Changed command line utility to use multicore CPUs (now if processing several files each file processed on it's own core)
* Changed installer to install for all users by default

1.0.48
+ Added Microsoft public license file
+ Added code to control fonts and CSS fonts assignments from settings