@@ -147,7 +147,9 @@
     <Compile Include="ElementConverters\PoemAuthorConverter.cs" />
     <Compile Include="ElementConverters\PoemConverter.cs" />
     <Compile Include="ElementConverters\PoemDateConverter.cs" />
+    <Compile Include="ElementConverters\PoemEpigraphConverter.cs" />
     <Compile Include="ElementConverters\PoemSubtitleConverter.cs" />
+    <Compile Include="ElementConverters\PoemTitleConverter.cs" />
     <Compile Include="ElementConverters\RowConverter.cs" />
     <Compile Include="ElementConverters\SimpleTextElementConverter.cs" />
     <Compile Include="ElementConverters\StanzaConverter.cs" />
